lib/flare_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Bindings to Flare Document Database.
///
class FlareBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlareBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlareBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Close the database
  void db_close(ffi.Pointer<DB> db) {
    return _db_close(db);
  }

  late final _db_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DB>)>>(
        'db_close',
      );
  late final _db_close = _db_closePtr
      .asFunction<void Function(ffi.Pointer<DB>)>();

  /// Secondary Index
  int db_create_index(ffi.Pointer<DB> db, ffi.Pointer<ffi.Char> name) {
    return _db_create_index(db, name);
  }

  late final _db_create_indexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<DB>, ffi.Pointer<ffi.Char>)
        >
      >('db_create_index');
  late final _db_create_index = _db_create_indexPtr
      .asFunction<int Function(ffi.Pointer<DB>, ffi.Pointer<ffi.Char>)>();

  /// Delete a document by key
  bool db_delete(ffi.Pointer<DB> db, ffi.Pointer<ffi.Char> key) {
    return _db_delete(db, key);
  }

  late final _db_deletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<DB>, ffi.Pointer<ffi.Char>)
        >
      >('db_delete');
  late final _db_delete = _db_deletePtr
      .asFunction<bool Function(ffi.Pointer<DB>, ffi.Pointer<ffi.Char>)>();

  /// Free a string returned by db_get, db_get_by_key, etc.
  void db_free_string(ffi.Pointer<ffi.Char> s) {
    return _db_free_string(s);
  }

  late final _db_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'db_free_string',
      );
  late final _db_free_string = _db_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Get a document by ID (internal offset)
  ffi.Pointer<ffi.Char> db_get(ffi.Pointer<DB> db, int id) {
    return _db_get(db, id);
  }

  late final _db_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<DB>, ffi.Int64)
        >
      >('db_get');
  late final _db_get = _db_getPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<DB>, int)>();

  /// Get a document by key
  ffi.Pointer<ffi.Char> db_get_by_key(
    ffi.Pointer<DB> db,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _db_get_by_key(db, key);
  }

  late final _db_get_by_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<DB>, ffi.Pointer<ffi.Char>)
        >
      >('db_get_by_key');
  late final _db_get_by_key = _db_get_by_keyPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<DB>, ffi.Pointer<ffi.Char>)
      >();

  ffi.Pointer<ffi.Char> db_get_index_name(ffi.Pointer<DB> db, int indexIdx) {
    return _db_get_index_name(db, indexIdx);
  }

  late final _db_get_index_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<DB>, ffi.Int32)
        >
      >('db_get_index_name');
  late final _db_get_index_name = _db_get_index_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<DB>, int)>();

  int db_get_root(ffi.Pointer<DB> db, int indexIdx) {
    return _db_get_root(db, indexIdx);
  }

  late final _db_get_rootPtr =
      _lookup<
        ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<DB>, ffi.Int32)>
      >('db_get_root');
  late final _db_get_root = _db_get_rootPtr
      .asFunction<int Function(ffi.Pointer<DB>, int)>();

  void db_iterator_close(ffi.Pointer<DBIterator> it) {
    return _db_iterator_close(it);
  }

  late final _db_iterator_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DBIterator>)>>(
        'db_iterator_close',
      );
  late final _db_iterator_close = _db_iterator_closePtr
      .asFunction<void Function(ffi.Pointer<DBIterator>)>();

  bool db_iterator_next(
    ffi.Pointer<DBIterator> it,
    ffi.Pointer<ffi.Pointer<ffi.Char>> key,
    ffi.Pointer<ffi.Pointer<ffi.Char>> json,
  ) {
    return _db_iterator_next(it, key, json);
  }

  late final _db_iterator_nextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Pointer<DBIterator>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('db_iterator_next');
  late final _db_iterator_next = _db_iterator_nextPtr
      .asFunction<
        bool Function(
          ffi.Pointer<DBIterator>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  /// Iterator
  ffi.Pointer<DBIterator> db_iterator_open(
    ffi.Pointer<DB> db,
    int rootOffset,
    ffi.Pointer<ffi.Char> startKey,
    ffi.Pointer<ffi.Char> endKey,
  ) {
    return _db_iterator_open(db, rootOffset, startKey, endKey);
  }

  late final _db_iterator_openPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<DBIterator> Function(
            ffi.Pointer<DB>,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('db_iterator_open');
  late final _db_iterator_open = _db_iterator_openPtr
      .asFunction<
        ffi.Pointer<DBIterator> Function(
          ffi.Pointer<DB>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Open or create a database file
  ffi.Pointer<DB> db_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.UnsignedChar> encryption_key,
  ) {
    return _db_open(path, encryption_key);
  }

  late final _db_openPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<DB> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.UnsignedChar>,
          )
        >
      >('db_open');
  late final _db_open = _db_openPtr
      .asFunction<
        ffi.Pointer<DB> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.UnsignedChar>,
        )
      >();

  /// Insert or update a document with a specific key
  int db_put(
    ffi.Pointer<DB> db,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> json,
  ) {
    return _db_put(db, key, json);
  }

  late final _db_putPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int64 Function(
            ffi.Pointer<DB>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('db_put');
  late final _db_put = _db_putPtr
      .asFunction<
        int Function(
          ffi.Pointer<DB>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void db_put_secondary(
    ffi.Pointer<DB> db,
    int indexIdx,
    ffi.Pointer<ffi.Char> secKey,
    ffi.Pointer<ffi.Char> primKey,
  ) {
    return _db_put_secondary(db, indexIdx, secKey, primKey);
  }

  late final _db_put_secondaryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<DB>,
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('db_put_secondary');
  late final _db_put_secondary = _db_put_secondaryPtr
      .asFunction<
        void Function(
          ffi.Pointer<DB>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void db_remove_secondary(
    ffi.Pointer<DB> db,
    int indexIdx,
    ffi.Pointer<ffi.Char> secKey,
    ffi.Pointer<ffi.Char> primKey,
  ) {
    return _db_remove_secondary(db, indexIdx, secKey, primKey);
  }

  late final _db_remove_secondaryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<DB>,
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('db_remove_secondary');
  late final _db_remove_secondary = _db_remove_secondaryPtr
      .asFunction<
        void Function(
          ffi.Pointer<DB>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Encryption
  void db_set_key(ffi.Pointer<DB> db, ffi.Pointer<ffi.UnsignedChar> key) {
    return _db_set_key(db, key);
  }

  late final _db_set_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<DB>, ffi.Pointer<ffi.UnsignedChar>)
        >
      >('db_set_key');
  late final _db_set_key = _db_set_keyPtr
      .asFunction<
        void Function(ffi.Pointer<DB>, ffi.Pointer<ffi.UnsignedChar>)
      >();

  /// Flush changes to disk
  void db_sync(ffi.Pointer<DB> db) {
    return _db_sync(db);
  }

  late final _db_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DB>)>>(
        'db_sync',
      );
  late final _db_sync = _db_syncPtr
      .asFunction<void Function(ffi.Pointer<DB>)>();
}

final class DB extends ffi.Opaque {}

final class DBIterator extends ffi.Opaque {}
